--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "eslint": "^4.14.0",
+    "sass": "^1.0.0-beta.4",
     "scss": "^0.2.4"
   },
   "devDependencies": {
