--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "styles": "sass ./src/style.scss:./dist/style.css",
+    "styles": "scss ./src/style.scss:./dist/style.css",
     "styles:watch": "scss --watch ./src/style.scss:./dist/style.css",
     "start": "webpack"
   },
