--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Monopoly game online",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
     "start": "webpack --watch"
   },
   "keywords": [
@@ -20,6 +19,7 @@
   "devDependencies": {
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
