--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Monopoly game online",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack",
+    "wds": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "eslint": "^4.14.0"
   },
   "devDependencies": {
+    "webpack-dev-server": "^2.9.7",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
